# erc1066-x402

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  README.md  foundry.toml  package.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  deploy-testnet.yml  release.yml
.husky/: pre-commit
.husky/_/: husky.sh
contracts/intents/: BaseIntentValidator.sol  IIntentValidator.sol  IntentExecutor.sol  IntentTypes.sol  PolicyRegistry.sol  StatusCodes.sol
deployments/: registry.json
docs/: BRANCH_SETUP.md  DEVELOPMENT.md  DOCUMENTATION_STRUCTURE.md  MAIN_BRANCH_CHECKLIST.md  MAIN_BRANCH_PREPARATION.md  MAIN_BRANCH_READY.md  QUICK_START_COMPLETE.md  README.md  TROUBLESHOOTING.md
docs/api/: README.md
docs/architecture/: MULTI_CHAIN.md  NETWORK_AGNOSTIC.md
docs/changelog/: CHANGELOG_NETWORK_AGNOSTIC.md  README.md
docs/deployment/: AVALANCHE.md  DEPLOYED_ADDRESSES.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_RESULTS.md  DEPLOYMENT_SUCCESS.md  HYPERION.md  MANTLE.md  METIS.md  NETWORKS.md  SETUP_FOUNDRY.md
docs/examples/: basic-usage.md  policy-setup.md
docs/integration/: AGENTS.md  CUSTOM_NETWORKS.md  GATEWAY.md
docs/publishing/: NPM_PUBLISH_2FA.md  PUBLISHING.md  PUBLISHING_STATUS.md  README.md
docs/sdk/: README.md  (+2 more)
programs/solana-intents/programs/solana-intents/: Cargo.toml
programs/solana-intents/programs/solana-intents/src/: lib.rs  state.rs  status.rs
script/: Deploy.s.sol  DeployExecutor.s.sol  DeployMultiChain.s.sol  DeployPolicyRegistry.s.sol  DeployValidator.s.sol  VerifyHyperion.s.sol
specs/: README.md
(+38 files in other folders)
