[package]
name = "solana-intents"
version = "0.1.0"
description = "ERC-1066-x402 Intent Framework for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_intents"

[dependencies]
anchor-lang = "0.30.1"
borsh = "0.10.3"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = []
idl-build = ["anchor-lang/idl-build"]
default = []

